Fixed some contrast issues and headings

--- a/code/style.css
+++ b/code/style.css
@@ -5,6 +5,8 @@ body{
 }
 .header {
     background-image: url('./assets/books_mobile1.jpg');
+    background-color: rgb(165, 163, 163);
+    background-blend-mode: multiply;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
@@ -65,6 +67,7 @@ body{
     width: 150px;
     height: 150px;
     border-radius: 50%;
+    border: 2px solid white;
     position: absolute;
     top: 270px;
     right: 24px;
@@ -152,6 +155,7 @@ body{
   margin-bottom: 10px;
   width: 100%;
   margin-bottom: 20px;
+  background-color: rgb(75, 76, 114);
 }
 .last {
   display: none;
@@ -172,12 +176,12 @@ body{
   font-family: Montserrat;
   font-weight: 600;
   text-transform: uppercase;
-  ;
 }
 .project-image {
   width: 100%;
   height: 210px;
   filter: brightness(70%);
+  opacity: 0.7;
   z-index: 2;
 }
 .project-subtitle, .project-description, .project-tag{
@@ -235,6 +239,7 @@ body{
 .tags-container{
   width: 70%;
   margin-top: 10px;
+  padding: 0;
 }
 
 /* Thoughts section */
